--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Core build tools (add these first)
+pip>=23.0
+setuptools>=65.0
+wheel>=0.38.0
+
+# Your app dependencies with specific versions
 streamlit==1.28.0
 scikit-learn==1.3.0
 pandas==2.0.3
